day-10/ingress-echo-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - testes.carlosclaro.com.br
    secretName: testes-carlosclaro-tls-prod
  rules:
  - host: testes.carlosclaro.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-canary
            port:
              number: 80
